# heterogeneous_graph

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/simple_synchronous/: CMakeLists.txt
examples/simple_synchronous/src/: simple_synchronous.cpp
examples/synchronous/: CMakeLists.txt
examples/synchronous/src/: synchronous.cpp
include/: asynchronous_calculation_task.hpp  calculation_graph.hpp  calculation_graph_property.hpp  calculation_task.hpp  calculation_task_traits.hpp  compression_algorithms.hpp  connected_calculation_task.hpp  counter.hpp  cpu_resource.hpp  cut_off_calculation_task.hpp  dynamic_stuff_node.hpp  environment.hpp  exception.hpp  execution_functions.hpp  layer.hpp  multi_call_counter.hpp  program.hpp  program_utility.hpp  resource.hpp  synchronouos_calculation_task.hpp  types.hpp  utility_stuff.hpp  variable.hpp
include/commands/: command.hpp  for.hpp  if.hpp  while.hpp
src/: asynchronous_calculation_task.cpp  calculation_graph.cpp  calculation_task.cpp  compression_algorithms.cpp  connected_calculation_task.cpp  counter.cpp  cpu_resource.cpp  cut_off_calculation_task.cpp  dynamic_stuff_node.cpp  environment.cpp  exception.cpp  execution_functions.cpp  layer.cpp  multi_call_counter.cpp  program.cpp  program_utility.cpp  resource.cpp  synchronouos_calculation_task.cpp  utility_stuff.cpp  variable.cpp
src/commands/: command.cpp  for.cpp  if.cpp  while.cpp
test/exception/: CMakeLists.txt
test/exception/src/: exception.cpp
